[package]
name = "dn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
futures = "0.3.28"
indicatif = { version = "0.17.7", features = ["tokio"] }
once_cell = "1.19.0"
reqwest = { version = "0.11.22", features = ["stream"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sled = "0.34.7"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }


[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
